--- a/package.json
+++ b/package.json
@@ -2,21 +2,24 @@
   "name": "fundamentosgraphql",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon -r sucrase/register src/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "apollo-server": "^3.10.0",
-    "graphql": "^16.5.0"
+    "apollo-server": "2.23.0",
+    "graphql": "15.5.0",
+    "sucrase": "^3.24.0"
   },
   "devDependencies": {
     "eslint": "^8.21.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "nodemon": "^2.0.19",
     "prettier": "^2.7.1"
   }
 }
